--- a/index.html
+++ b/index.html
@@ -71,6 +71,8 @@
                         <!-- About -->
                             <article id="about">
                                 <h2 class="major">Publications</h2>
+                                <p><b> </b><br>Zahra Fatemi, Abari Bhattacharya, Andrew Wentzel, Vipul Dhariwal, Lauren Levine, Andrew Rojecki, G. Elisabeta Marai1, Barbara Di Eugenio, Elena Zheleva <a href="https://arxiv.org/pdf/2209.05729.pdf">. PDF.</a></b></p>
+                                <p><b>Non-Parametric Inference of Relational Dependence </b><br>Ragib Ahsan, Zahra Fatemi, David Arbour, Elena Zheleva <a href="https://openreview.net/pdf?id=rxZffdLs9eq">. PDF.</a></b></p>
                                 <p><b>Improving Gender Fairness of Pre-trained Language Models without Catastrophic Forgetting </b><br>Zahra Fatemi, Chen Xing, Wenhao Liu, Caiming Xiong <a href="https://arxiv.org/pdf/2110.05367">. PDF.</a></b></p>
                                 <p><b>Minimizing Interference and Selection Bias in Network Experiment Design</b><br>Zahra Fatemi, Elena Zheleva</br>14th International AAAI Conference on Web and Social Media (ICWSM) 2020.<b> Best Paper Honorable Mention.</b> <a href="https://www.aaai.org/ojs/index.php/ICWSM/article/view/7289/7143"> PDF.</a></p>
                                 <p><b>Network Experiment Design for Estimating Direct Treatment Effects</b><br>Zahra Fatemi, Elena Zheleva</br>KDD Workshop on Mining and Learning with Graphs (MLG) 2020.<a href="http://www.mlgworkshop.org/2020/papers/MLG2020_paper_34.pdf">PDF.</a></p>
