--- a/index.html
+++ b/index.html
@@ -61,7 +61,10 @@
                         <!-- Work -->
                             <article id="work">
                                 <h2 class="major">News</h2>
-                                <p><b>August 2020:</b>  I will present our paper "Network Experiment Design for Estimating Direct Treatment Effects" at KDD workshop on Mining and Learning with Graphs (MLG).
+                                <p><b>August 2020:</b>  I will be presenting my joint work with Salesforce Research titled "Improving Gender Fairness of Pre-trained Language Models without Catastrophic Forgetting" at the 61st Annual Meeting of the Association for Computational Linguistics(ACL).
+                                <p><b>June 2023:</b>  I presented our paper "Contagion Effect Estimation using Proximal Embeddings" as a poster at IDEAL Annual Meeting.
+                                <p><b>May 2023:</b>  I presented our paper "Contagion Effect Estimation using Proximal Embeddings" as a poster at the Midwest Machine Learning Symposium (MMLS).
+                                <p><b>August 2020:</b>  I will be presenting our paper "Network Experiment Design for Estimating Direct Treatment Effects" at KDD workshop on Mining and Learning with Graphs (MLG).
                             <p><b>July 2020:</b>    I will present our paper "Minimizing Interference and Selection Bias in Network Experiment Design" as a poster at WiML Un-Workshop at 37th International Conference on Machine Learning (ICML). </p>
                             <p><b>June 2020:</b>  I am honored to receive Grace Hopper Celebration (GHC) Scholarship.</p>
                             <p><b>June 2020:</b>  I will present our paper "Minimizing Interference and Selection Bias in Network Experiment Design" at 14th International AAAI Conference on Web and Social Media (ICWSM).
