--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                         <!-- Intro -->
                             <article id="intro">
                                 <h2 class="major">About me</h2>
-                                <p>I am a Ph.D. student in the department of Computer Science at the University of Illinois at Chicago (UIC), advised by <a href="https://www.cs.uic.edu/~elena/">Professor Elena Zheleva</a>. My research interests lie at the intersection of Causal Inference, Machine Learning, and Social Network Analysis. I am particularly interested in adapting machine learning methods for 1) mitigating biases in Randomized Control Trial (RCT) or A/B testing 2) counterfactual reasoning, and 3) controlling  confounding bias in network data.
+                                <p>I am a Ph.D. student in the department of Computer Science at the University of Illinois at Chicago (UIC), advised by <a href="https://www.cs.uic.edu/~elena/">Professor Elena Zheleva</a>. My research interests lie at the intersection of Causal Inference, Machine Learning, and Social Network Analysis. I am particularly interested in adapting machine learning methods for 1) mitigating biases in Randomized Control Trial (RCT) or A/B testing 2) counterfactual reasoning, and 3) controlling  confounding bias in network data. I am currently on the job market and actively seeking new research opportunities.
                                 </p>
                                 <p>I received my Master's degree in Network Science from University of Tehran, where I was advised by Professor Mostafa Salehi. During my M.Sc., I focused on proposing a pipeline to reveal and visualize hidden structures in networks.</p>
                             </article>
