--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
                         <!-- Work -->
                             <article id="work">
                                 <h2 class="major">News</h2>
+                                <p><b>August 2023:</b>  I will be presenting our work titled "Network Experiment Design for Diffusion Modeling" at KDD PhD Consortium.
                                 <p><b>July 2023:</b>  I will be presenting my joint work with Salesforce Research titled "Improving Gender Fairness of Pre-trained Language Models without Catastrophic Forgetting" at the 61st Annual Meeting of the Association for Computational Linguistics(ACL).
                                 <p><b>June 2023:</b>  I presented our paper "Contagion Effect Estimation using Proximal Embeddings" as a poster at IDEAL Annual Meeting.
                                 <p><b>May 2023:</b>  I presented our paper "Contagion Effect Estimation using Proximal Embeddings" as a poster at the Midwest Machine Learning Symposium (MMLS).
