--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
                         <!-- Intro -->
                             <article id="intro">
                                 <h2 class="major">About me</h2>
-                                <p>I am a Ph.D. candidate in the department of Computer Science at the University of Illinois Chicago (UIC), advised by <a href="https://www.cs.uic.edu/~elena/">Professor Elena Zheleva</a>. My research interests lie at the intersection of Causal Inference, Machine Learning, and Experimentation. In addition, I have a strong background in time series forecasting and extensive experience in Large Language Models (LLMs) Pretraining. I am currently (2023) on the job market and actively seeking research opportunities.
+                                <p>I am a researcher at JPMorgan Chase & Co., specializing in pre-training Language Models for financial recommendation applications. I also have a strong background in Causal Inference and Time Series Forecasting, along with extensive experience in reasoning with Large Language Models.
                                 </p>
-                                <p>I received my Master's degree in Network Science from University of Tehran, where I was advised by Professor Mostafa Salehi. During my M.Sc., I focused on proposing a pipeline to reveal and visualize hidden structures in networks.</p>
+                                <p>I received my Ph.D degree from the University of Illinois Chicago (UIC), where I was advised by <a href="https://www.cs.uic.edu/~elena/">Professor Elena Zheleva</a>. During my Ph.D, I focused on proposing a pipeline to mitigate interference and selection bias in randomized experiments on network data.</p>
                             </article>
 
                         <!-- Work -->
