--- a/index.html
+++ b/index.html
@@ -90,9 +90,10 @@
                             
                             <article id="exp">
                                 <h2 class="major">Experience</h2>
+                                <p><b>December 2023-Present:</b>  Applied AI/ML Researcher - JPMorgan Chase & Co.
                                 <p><b>June 2022-September 2022:</b>  Research Intern - Google
                                 <p><b>June 2021-September 2021:</b>  Research Intern - Salesforce Research
-                            <p><b>February 2017-April 2017 </b> Data Science Intern - Rocoland
+        
                             </p>
                             </article>
 
